Add silhouettes, ambient audio, and refine narrative text
- SVG silhouettes for each section with parallax effects
- Web Audio API ambient drone that evolves per section
- Audio toggle button (bottom right)
- Rewrote all text to follow the animation's imagery
- Added QA.md to track known issues

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 </head>
 <body>
   <canvas id="particles"></canvas>
+
+  <!-- Audio Toggle -->
+  <button class="audio-toggle" id="audioToggle" aria-label="Toggle sound">
+    <svg class="audio-icon audio-icon--off" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+      <path d="M11 5L6 9H2v6h4l5 4V5z"/>
+      <line x1="23" y1="9" x2="17" y2="15"/>
+      <line x1="17" y1="9" x2="23" y2="15"/>
+    </svg>
+    <svg class="audio-icon audio-icon--on" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+      <path d="M11 5L6 9H2v6h4l5 4V5z"/>
+      <path d="M15.54 8.46a5 5 0 010 7.07"/>
+      <path d="M19.07 4.93a10 10 0 010 14.14"/>
+    </svg>
+  </button>
   <div class="scroll-container">
 
     <!-- Section 1: Opening -->
@@ -56,9 +70,10 @@
       <div class="scene__content">
         <div class="text-block">
           <h2>The Encounter</h2>
-          <p>Death does not hunt.</p>
-          <p>It simply arrives — quiet, curious, patient.</p>
-          <p class="quote">"From the moment we are born, death walks beside us. Not as enemy, but as companion."</p>
+          <p>A small thing, trembling and new.</p>
+          <p>Death kneels. Not to take — but to see.</p>
+          <p>It reaches out, and the flowers blacken at its touch.</p>
+          <p class="quote">Yet it withdraws. Not yet.</p>
         </div>
       </div>
     </section>
@@ -84,10 +99,10 @@
       <div class="scene__content">
         <div class="text-block">
           <h2>The Waiting</h2>
-          <p>Through seasons turning.</p>
-          <p>Through moments of joy and sorrow.</p>
-          <p>Death waits — never rushing, never impatient.</p>
-          <p class="quote">"Time means nothing to death. It has witnessed every spring and will witness every winter yet to come."</p>
+          <p>The fawn grows. Learns to run.</p>
+          <p>Death watches from the treeline.</p>
+          <p>It has nowhere else to be.</p>
+          <p class="quote">Seasons pass. The antlers grow. Death remains.</p>
         </div>
       </div>
     </section>
@@ -128,10 +143,10 @@
       <div class="scene__content">
         <div class="text-block">
           <h2>Always Near</h2>
-          <p>In the rustle of autumn leaves.</p>
-          <p>In the stillness of a winter morning.</p>
-          <p>In the shadow at the edge of every joyful gathering.</p>
-          <p class="quote">"We spend our lives running from what has always been beside us."</p>
+          <p>At the edge of the meadow.</p>
+          <p>Behind the last tree before the clearing.</p>
+          <p>Never chasing. Only present.</p>
+          <p class="quote">The deer does not run. Perhaps it knows.</p>
         </div>
       </div>
     </section>
@@ -157,10 +172,10 @@
       <div class="scene__content">
         <div class="text-block">
           <h2>The Embrace</h2>
-          <p>And when the time comes —</p>
-          <p>not a taking, but a receiving.</p>
-          <p>Not an ending, but a return.</p>
-          <p class="quote">"Death's embrace is not cold. It is the final warmth after a long journey."</p>
+          <p>The deer lies down in the snow.</p>
+          <p>Death finally crosses the clearing.</p>
+          <p>It kneels once more. This time, it stays.</p>
+          <p class="quote">A hand on weathered fur. The long exhale.</p>
         </div>
       </div>
     </section>
@@ -184,8 +199,8 @@
 
       <div class="scene__content">
         <div class="text-block text-block--centered">
-          <p class="reflection-text">Perhaps death is not the opposite of life,</p>
-          <p class="reflection-text">but the proof that life was lived.</p>
+          <p class="reflection-text">Death was never the enemy.</p>
+          <p class="reflection-text">It was the one who waited longest to say goodbye.</p>
           <div class="divider"></div>
           <p class="credit">Inspired by "The Life of Death" (2012)</p>
           <p class="credit">Animation by Marsha Onderstijn</p>
