--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
 
       <div class="scene__content">
         <div class="text-block">
+          <blockquote class="epigraph">
+            <p>"Because I could not stop for Death – He kindly stopped for me"</p>
+            <cite>Emily Dickinson</cite>
+          </blockquote>
           <h2>The Encounter</h2>
           <p>A small thing, trembling and new.</p>
           <p>Death kneels. Not to take — but to see.</p>
           <p>It reaches out, and the flowers blacken at its touch.</p>
-          <p class="quote">Yet it withdraws. Not yet.</p>
+          <p class="beat">Yet it withdraws. Not yet.</p>
         </div>
       </div>
     </section>
@@ -118,7 +122,7 @@
           <p>The fawn grows. Learns to run.</p>
           <p>Death watches from the treeline.</p>
           <p>It has nowhere else to be.</p>
-          <p class="quote">Seasons pass. The antlers grow. Death remains.</p>
+          <p class="beat">Seasons pass. The antlers grow. Death remains.</p>
         </div>
       </div>
     </section>
@@ -158,11 +162,15 @@
 
       <div class="scene__content">
         <div class="text-block">
+          <blockquote class="epigraph">
+            <p>"You would know the secret of death. But how shall you find it unless you seek it in the heart of life?"</p>
+            <cite>Kahlil Gibran</cite>
+          </blockquote>
           <h2>Always Near</h2>
           <p>At the edge of the meadow.</p>
           <p>Behind the last tree before the clearing.</p>
           <p>Never chasing. Only present.</p>
-          <p class="quote">The deer does not run. Perhaps it knows.</p>
+          <p class="beat">The deer does not run. Perhaps it knows.</p>
         </div>
       </div>
     </section>
@@ -191,7 +199,7 @@
           <p>The deer lies down in the snow.</p>
           <p>Death finally crosses the clearing.</p>
           <p>It kneels once more. This time, it stays.</p>
-          <p class="quote">A hand on weathered fur. The long exhale.</p>
+          <p class="beat">A hand on weathered fur. The long exhale.</p>
         </div>
       </div>
     </section>
@@ -217,9 +225,23 @@
         <div class="text-block text-block--centered">
           <p class="reflection-text">Death was never the enemy.</p>
           <p class="reflection-text">It was the one who waited longest to say goodbye.</p>
+          <blockquote class="epigraph epigraph--final">
+            <p>"For what is it to die but to stand naked in the wind and to melt into the sun?"</p>
+            <cite>Kahlil Gibran</cite>
+          </blockquote>
           <div class="divider"></div>
-          <p class="credit">Inspired by "The Life of Death" (2012)</p>
-          <p class="credit">Animation by Marsha Onderstijn</p>
+          <p class="credit">Inspired by</p>
+          <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="film-link">
+            <span class="film-link__title">"The Life of Death"</span>
+            <span class="film-link__year">(2012)</span>
+          </a>
+          <p class="credit credit--author">Animation by Marsha Onderstijn</p>
+          <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="watch-btn">
+            <svg class="watch-btn__icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M8 5v14l11-7z"/>
+            </svg>
+            <span>Watch the Film</span>
+          </a>
         </div>
       </div>
     </section>
