Add smooth scroll and link poem sources
- Smooth scroll with reduced-motion fallback
- Citations link to Poetry Foundation
- Subtle hover style on source links

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="text-block">
           <blockquote class="epigraph">
             <p>"Because I could not stop for Death – He kindly stopped for me"</p>
-            <cite>Emily Dickinson</cite>
+            <cite><a href="https://www.poetryfoundation.org/poems/47652/because-i-could-not-stop-for-death-479" target="_blank" rel="noopener">Emily Dickinson</a></cite>
           </blockquote>
           <h2>The Encounter</h2>
           <p>A small thing, trembling and new.</p>
@@ -164,7 +164,7 @@
         <div class="text-block">
           <blockquote class="epigraph">
             <p>"You would know the secret of death. But how shall you find it unless you seek it in the heart of life?"</p>
-            <cite>Kahlil Gibran</cite>
+            <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
           </blockquote>
           <h2>Always Near</h2>
           <p>At the edge of the meadow.</p>
@@ -227,7 +227,7 @@
           <p class="reflection-text">It was the one who waited longest to say goodbye.</p>
           <blockquote class="epigraph epigraph--final">
             <p>"For what is it to die but to stand naked in the wind and to melt into the sun?"</p>
-            <cite>Kahlil Gibran</cite>
+            <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
           </blockquote>
           <div class="divider"></div>
           <p class="credit">Inspired by</p>
