Add delayed fade-in for reflection section credits

--- a/index.html
+++ b/index.html
@@ -96,23 +96,25 @@
     <div class="panel panel--reflection" data-section="5">
       <p class="reflection-text">Death was never the enemy.</p>
       <p class="reflection-text">It was the one who waited longest to say goodbye.</p>
-      <blockquote class="epigraph epigraph--final">
-        <p>"For what is it to die but to stand naked in the wind and to melt into the sun?"</p>
-        <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
-      </blockquote>
-      <div class="divider"></div>
-      <p class="credit">Inspired by</p>
-      <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="film-link">
-        <span class="film-link__title">"The Life of Death"</span>
-        <span class="film-link__year">(2012)</span>
-      </a>
-      <p class="credit credit--author">Animation by Marsha Onderstijn</p>
-      <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="watch-btn">
-        <svg class="watch-btn__icon" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M8 5v14l11-7z"/>
-        </svg>
-        <span>Watch the Film</span>
-      </a>
+      <div class="reflection-delayed">
+        <blockquote class="epigraph epigraph--final">
+          <p>"For what is it to die but to stand naked in the wind and to melt into the sun?"</p>
+          <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
+        </blockquote>
+        <div class="divider"></div>
+        <p class="credit">Inspired by</p>
+        <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="film-link">
+          <span class="film-link__title">"The Life of Death"</span>
+          <span class="film-link__year">(2012)</span>
+        </a>
+        <p class="credit credit--author">Animation by Marsha Onderstijn</p>
+        <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="watch-btn">
+          <svg class="watch-btn__icon" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M8 5v14l11-7z"/>
+          </svg>
+          <span>Watch the Film</span>
+        </a>
+      </div>
     </div>
 
     <!-- Scroll hint -->
