--- a/index.html
+++ b/index.html
@@ -1,141 +1,213 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Life of Death - A Tribute</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- Cinematic Letterbox -->
-  <div class="letterbox letterbox--top"></div>
-  <div class="letterbox letterbox--bottom"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>The Life of Death - A Tribute</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <!-- Cinematic Letterbox -->
+        <div class="letterbox letterbox--top"></div>
+        <div class="letterbox letterbox--bottom"></div>
 
-  <!-- Particles -->
-  <canvas id="particles"></canvas>
+        <!-- Particles -->
+        <canvas id="particles"></canvas>
 
-  <!-- Audio Toggle -->
-  <button class="audio-toggle" id="audioToggle" aria-label="Toggle sound">
-    <svg class="audio-icon audio-icon--off" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-      <path d="M11 5L6 9H2v6h4l5 4V5z"/>
-      <line x1="23" y1="9" x2="17" y2="15"/>
-      <line x1="17" y1="9" x2="23" y2="15"/>
-    </svg>
-    <svg class="audio-icon audio-icon--on" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-      <path d="M11 5L6 9H2v6h4l5 4V5z"/>
-      <path d="M15.54 8.46a5 5 0 010 7.07"/>
-      <path d="M19.07 4.93a10 10 0 010 14.14"/>
-    </svg>
-  </button>
+        <!-- Audio Toggle -->
+        <button class="audio-toggle" id="audioToggle" aria-label="Toggle sound">
+            <svg
+                class="audio-icon audio-icon--off"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.5"
+            >
+                <path d="M11 5L6 9H2v6h4l5 4V5z" />
+                <line x1="23" y1="9" x2="17" y2="15" />
+                <line x1="17" y1="9" x2="23" y2="15" />
+            </svg>
+            <svg
+                class="audio-icon audio-icon--on"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.5"
+            >
+                <path d="M11 5L6 9H2v6h4l5 4V5z" />
+                <path d="M15.54 8.46a5 5 0 010 7.07" />
+                <path d="M19.07 4.93a10 10 0 010 14.14" />
+            </svg>
+        </button>
 
-  <!-- Fixed Stage -->
-  <div class="stage">
-    <!-- Background that transitions -->
-    <div class="stage__bg"></div>
-    <!-- Hero gradient overlay - only visible on hero -->
-    <div class="stage__hero-gradient"></div>
+        <!-- Fixed Stage -->
+        <div class="stage">
+            <!-- Background that transitions -->
+            <div class="stage__bg"></div>
+            <!-- Hero gradient overlay - only visible on hero -->
+            <div class="stage__hero-gradient"></div>
 
-    <!-- Mist layers -->
-    <div class="mist mist--back"></div>
-    <div class="mist mist--mid"></div>
-    <div class="mist mist--front"></div>
+            <!-- Mist layers -->
+            <div class="mist mist--back"></div>
+            <div class="mist mist--mid"></div>
+            <div class="mist mist--front"></div>
 
-    <!-- Content panels - only one visible at a time -->
-    <div class="panel panel--opening is-active" data-section="0">
-      <h1 class="hero__title">
-        <span class="hero__title-line">The Life</span>
-        <span class="hero__title-line hero__title-line--of">of</span>
-        <span class="hero__title-line">Death</span>
-      </h1>
-      <p class="hero__subtitle">A tribute to Marsha Onderstijn</p>
-    </div>
+            <!-- Content panels - only one visible at a time -->
+            <div class="panel panel--opening is-active" data-section="0">
+                <h1 class="hero__title">
+                    <span class="hero__title-line">The Life</span>
+                    <span class="hero__title-line hero__title-line--of"
+                        >of</span
+                    >
+                    <span class="hero__title-line">Death</span>
+                </h1>
+                <p class="hero__subtitle">
+                    <span>A tribute to 'Life of Death'</span>
+                    <span>by Marsha Onderstijn</span>
+                </p>
+            </div>
 
-    <div class="panel panel--encounter" data-section="1">
-      <blockquote class="epigraph">
-        <p>"Because I could not stop for Death – He kindly stopped for me"</p>
-        <cite><a href="https://www.poetryfoundation.org/poems/47652/because-i-could-not-stop-for-death-479" target="_blank" rel="noopener">Emily Dickinson</a></cite>
-      </blockquote>
-      <h2>The Encounter</h2>
-      <p>A small thing, trembling and new.</p>
-      <p>Death kneels. Not to take — but to see.</p>
-      <p>It reaches out, and the flowers blacken at its touch.</p>
-      <p class="beat">Yet it withdraws. Not yet.</p>
-    </div>
+            <div class="panel panel--encounter" data-section="1">
+                <blockquote class="epigraph">
+                    <p>
+                        "Because I could not stop for Death – He kindly stopped
+                        for me"
+                    </p>
+                    <cite
+                        ><a
+                            href="https://www.poetryfoundation.org/poems/47652/because-i-could-not-stop-for-death-479"
+                            target="_blank"
+                            rel="noopener"
+                            >Emily Dickinson</a
+                        ></cite
+                    >
+                </blockquote>
+                <h2>The Encounter</h2>
+                <p>A small thing, trembling and new.</p>
+                <p>Death kneels. Not to take — but to see.</p>
+                <p>It reaches out, and the flowers blacken at its touch.</p>
+                <p class="beat">Yet it withdraws. Not yet.</p>
+            </div>
 
-    <div class="panel panel--waiting" data-section="2">
-      <h2>The Waiting</h2>
-      <p>The fawn grows. Learns to run.</p>
-      <p>Death watches from the treeline.</p>
-      <p>It has nowhere else to be.</p>
-      <p class="beat">Seasons pass. The antlers grow. Death remains.</p>
-    </div>
+            <div class="panel panel--waiting" data-section="2">
+                <h2>The Waiting</h2>
+                <p>The fawn grows. Learns to run.</p>
+                <p>Death watches from the treeline.</p>
+                <p>It has nowhere else to be.</p>
+                <p class="beat">
+                    Seasons pass. The antlers grow. Death remains.
+                </p>
+            </div>
 
-    <div class="panel panel--near" data-section="3">
-      <blockquote class="epigraph">
-        <p>"You would know the secret of death. But how shall you find it unless you seek it in the heart of life?"</p>
-        <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
-      </blockquote>
-      <h2>Always Near</h2>
-      <p>At the edge of the meadow.</p>
-      <p>Behind the last tree before the clearing.</p>
-      <p>Never chasing. Only present.</p>
-      <p class="beat">The deer does not run. Perhaps it knows.</p>
-    </div>
+            <div class="panel panel--near" data-section="3">
+                <blockquote class="epigraph">
+                    <p>
+                        "You would know the secret of death. But how shall you
+                        find it unless you seek it in the heart of life?"
+                    </p>
+                    <cite
+                        ><a
+                            href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51"
+                            target="_blank"
+                            rel="noopener"
+                            >Kahlil Gibran, The Prophet</a
+                        ></cite
+                    >
+                </blockquote>
+                <h2>Always Near</h2>
+                <p>At the edge of the meadow.</p>
+                <p>Behind the last tree before the clearing.</p>
+                <p>Never chasing. Only present.</p>
+                <p class="beat">The deer does not run. Perhaps it knows.</p>
+            </div>
 
-    <div class="panel panel--embrace" data-section="4">
-      <h2>The Embrace</h2>
-      <p>The deer lies down in the snow.</p>
-      <p>Death finally crosses the clearing.</p>
-      <p>It kneels once more. This time, it stays.</p>
-      <p class="beat">A hand on weathered fur. The long exhale.</p>
-    </div>
+            <div class="panel panel--embrace" data-section="4">
+                <h2>The Embrace</h2>
+                <p>The deer lies down in the snow.</p>
+                <p>Death finally crosses the clearing.</p>
+                <p>It kneels once more. This time, it stays.</p>
+                <p class="beat">A hand on weathered fur. The long exhale.</p>
+            </div>
 
-    <div class="panel panel--reflection" data-section="5">
-      <p class="reflection-text">Death was never the enemy.</p>
-      <p class="reflection-text">It was the one who waited longest to say goodbye.</p>
-      <div class="reflection-delayed">
-        <blockquote class="epigraph epigraph--final">
-          <p>"For what is it to die but to stand naked in the wind and to melt into the sun?"</p>
-          <cite><a href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51" target="_blank" rel="noopener">Kahlil Gibran, The Prophet</a></cite>
-        </blockquote>
-        <div class="divider"></div>
-        <p class="credit">Inspired by</p>
-        <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="film-link">
-          <span class="film-link__title">"The Life of Death"</span>
-          <span class="film-link__year">(2012)</span>
-        </a>
-        <p class="credit credit--author">Animation by Marsha Onderstijn</p>
-        <a href="https://www.youtube.com/watch?v=ofnCdC8P70g" target="_blank" rel="noopener" class="watch-btn">
-          <svg class="watch-btn__icon" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M8 5v14l11-7z"/>
-          </svg>
-          <span>Watch the Film</span>
-        </a>
-      </div>
-    </div>
+            <div class="panel panel--reflection" data-section="5">
+                <p class="reflection-text">Death was never the enemy.</p>
+                <p class="reflection-text">
+                    It was the one who waited longest to say goodbye.
+                </p>
+                <div class="reflection-delayed">
+                    <blockquote class="epigraph epigraph--final">
+                        <p>
+                            "For what is it to die but to stand naked in the
+                            wind and to melt into the sun?"
+                        </p>
+                        <cite
+                            ><a
+                                href="https://www.poetryfoundation.org/poems/58702/on-death-5b2112bb8dd51"
+                                target="_blank"
+                                rel="noopener"
+                                >Kahlil Gibran, The Prophet</a
+                            ></cite
+                        >
+                    </blockquote>
+                    <div class="divider"></div>
+                    <p class="credit">Inspired by</p>
+                    <a
+                        href="https://www.youtube.com/watch?v=ofnCdC8P70g"
+                        target="_blank"
+                        rel="noopener"
+                        class="film-link"
+                    >
+                        <span class="film-link__title"
+                            >"The Life of Death"</span
+                        >
+                        <span class="film-link__year">(2012)</span>
+                    </a>
+                    <p class="credit credit--author">
+                        Animation by Marsha Onderstijn
+                    </p>
+                    <a
+                        href="https://www.youtube.com/watch?v=ofnCdC8P70g"
+                        target="_blank"
+                        rel="noopener"
+                        class="watch-btn"
+                    >
+                        <svg
+                            class="watch-btn__icon"
+                            viewBox="0 0 24 24"
+                            fill="currentColor"
+                        >
+                            <path d="M8 5v14l11-7z" />
+                        </svg>
+                        <span>Watch the Film</span>
+                    </a>
+                </div>
+            </div>
 
-    <!-- Scroll hint -->
-    <div class="scroll-hint">
-      <span>Scroll</span>
-      <div class="scroll-hint__arrow"></div>
-    </div>
-  </div>
+            <!-- Scroll hint -->
+            <div class="scroll-hint">
+                <span>Scroll</span>
+                <div class="scroll-hint__arrow"></div>
+            </div>
+        </div>
 
-  <!-- Invisible scroll track -->
-  <div class="scroll-track">
-    <div class="scroll-track__section" data-section="0"></div>
-    <div class="scroll-track__section" data-section="1"></div>
-    <div class="scroll-track__section" data-section="2"></div>
-    <div class="scroll-track__section" data-section="3"></div>
-    <div class="scroll-track__section" data-section="4"></div>
-    <div class="scroll-track__section" data-section="5"></div>
-  </div>
+        <!-- Invisible scroll track -->
+        <div class="scroll-track">
+            <div class="scroll-track__section" data-section="0"></div>
+            <div class="scroll-track__section" data-section="1"></div>
+            <div class="scroll-track__section" data-section="2"></div>
+            <div class="scroll-track__section" data-section="3"></div>
+            <div class="scroll-track__section" data-section="4"></div>
+            <div class="scroll-track__section" data-section="5"></div>
+        </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-  <script src="script.js"></script>
-</body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+        <script src="script.js"></script>
+    </body>
 </html>
